<resources>
    <string name="app_name">Life Speech Kidzo</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Login-->
    <string name="regtvTitleEmail">Email</string>
    <string name="login">Login</string>
    <string name="regtvTitlePassword">Password:</string>
    <string name="fblogin">Facebook Login</string>

    <!--Register-->
    <string name="regtvTitleConfirmPassword">Confirm Password:</string>
    <string name="regtvFirstName">First Name:</string>
    <string name="regtvLastName">Last Name:</string>
    <string name="regfirstname">Enter Your First Name</string>
    <string name="reglastname">Enter Your Last Name</string>
    <string name="register">Register</string>
    <string name="refemail">Example@gmail.com</string>
    <string name="regpwd">Enter Password</string>
    <string name="regtvUserName">Username:</string>
    <string name="regetUserName">Enter your Username</string>


    <!--forgert pwd-->
    <string name="forgetpwd"><b>Forget Password </b></string>
    <string name="code">Code:</string>
    <string name="entercode">Enter code receive</string>
    <string name="verify">Verify Account</string>
    <string name="changwpwd">Change Password</string>
    <string name="regnewpwd">Enter New Password</string>
    <string name="regnewpwdconfirm">Enter New Confirm Password</string>

    <!--updateprofile-->
    <string name="updateprofile">Update Profile</string>
    <string name="update">Update</string>


    <string name="contactus">Contact Us</string>
    <string name="contectdes">We are always delighted to be of service\n to you! Please note out address\n mentioned below for reference.</string>
    <string name="ouroffice">Our Office</string>
    <string name="ouraddress"><b>Our Address:</b> \n20 Havelock Road #02-59\nCentral Square\nSingapore 059765</string>
    <string name="operation"><b>Operation Hour:</b>\n9am-7pm(Monday - Sunday)</string>
    <string name="phone"><b>Phone: </b>Phone:\n +65 6423 0032</string>
    <string name="social"><b>Social Network: </b></string>


    <string name="textNoun">Noun</string>
    <string name="textviewPronouns">Pronouns</string>
    <string name="textviewPreposition">Preposition</string>
    <string name="textVerb">Verb</string>
    <string name="textConcepts">Concepts</string>


    <string name="facebook_app_id">190897715076966</string>
    <string name="fb_login_protocol_scheme">fb190897715076966</string>


</resources>
