<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="casual"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="@string/regtvFirstName"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/regEtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@mipmap/ic_launcher_name"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/regfirstname"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="@string/regtvLastName"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/regEtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@mipmap/ic_launcher_name"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/reglastname"
                    android:inputType="textPersonName"
                    android:textColor="#4b2000"
                    android:textColorHint="#4b2000" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="@string/regtvUserName"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/regEtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@mipmap/ic_launcher_name"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/regetUserName"
                    android:inputType="textPersonName"
                    android:textColor="#4b2000"
                    android:textColorHint="#4b2000" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="@string/regtvTitleEmail"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/regEtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@mipmap/ic_launcher_email"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/refemail"
                    android:inputType="textNoSuggestions"
                    android:textColor="#4b2000"
                    android:textColorHint="#4b2000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="@string/regtvTitlePassword"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/regtvTitlePassword" />

                <EditText
                    android:id="@+id/regEtPwd1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@mipmap/ic_launcher_password"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/regpwd"
                    android:inputType="textNoSuggestions"
                    android:textColor="#4b2000"
                    android:textColorHint="#4b2000" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="@string/regtvTitleConfirmPassword"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/regtvTitleConfirmPassword" />

                <EditText
                    android:id="@+id/regEtPwd2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@mipmap/ic_launcher_password"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/regtvTitleConfirmPassword"
                    android:inputType="textNoSuggestions"
                    android:textColor="#4b2000"
                    android:textColorHint="#4b2000" />


                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/buttondesign"
                    android:fontFamily="casual"
                    android:shadowColor="#4b2000"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/register"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#F89A06"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>