<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF305"
    android:orientation="vertical"
    android:id="@+id/drawerLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#4b2000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/regtvTitleEmail"
            android:textColor="#4b2000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextLogInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/refemail"
            android:drawableLeft="@mipmap/ic_launcher_email"
            android:inputType="textNoSuggestions"
            android:textColor="#4b2000"
            android:textColorHint="#4b2000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/regtvTitlePassword"
            android:textColor="#4b2000"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/regtvTitlePassword" />

        <EditText
            android:id="@+id/editTextLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/regpwd"
            android:drawableLeft="@mipmap/ic_launcher_password"
            android:inputType="textNoSuggestions"
            android:textColor="#4b2000"
            android:textColorHint="#4b2000" />

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:shadowColor="#4b2000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="Log In"
            android:textColor="#4b2000"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#FFF2D1"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>