<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordVerifyPage">


        <LinearLayout
            android:id="@+id/firstLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/verify"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="casual"
                android:text="@string/code"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/ic_launcher_password"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/entercode"
                android:inputType="textNoSuggestions|textPassword"
                android:textColor="#000000"
                android:textColorHint="#4b2000" />

            <Button
                android:id="@+id/verifybtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttondesign"
                android:fontFamily="casual"
                android:shadowColor="#4b2000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/verify"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>


</ScrollView>