<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordChangePasswordPage">


    <LinearLayout
        android:id="@+id/secondLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="casual"
            android:text="@string/changwpwd"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/regnewpwd"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextChangpw1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/ic_launcher_password"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/regnewpwd"
            android:inputType="textNoSuggestions|textPassword"
            android:textColor="#000000"
            android:textColorHint="#4b2000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/regnewpwdconfirm"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextChangpw2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/ic_launcher_password"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/regnewpwdconfirm"
            android:inputType="textNoSuggestions|textPassword"
            android:textColor="#000000"
            android:textColorHint="#4b2000" />

        <Button
            android:id="@+id/changepwdbtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttondesign"
            android:fontFamily="casual"
            android:shadowColor="#4b2000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/changwpwd"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>